# mashumaro

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  justfile  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: asdasd.md  bug-report.md  bug_report.md  issue_template.md
.github/workflows/: main.yml  publish.yml  release.yml
benchmark/: apischema_setup.py  cattr_setup.py  common.py  create_chart_specs.py  dacite_setup.py  enums.py  marshmallow_setup.py  mashumaro_setup.py  prepare_svg_for_darkness.py  pydantic_setup.py  run.py  run.sh  sample.py
benchmark/data/: issue.json  spec_template.json
docs/: 2to3.md  index.md
examples/: json_remapping.py
mashumaro/: __init__.py  abc.py  config.py  core.py  dialect.py  exceptions.py  helper.py  types.py  typing.py
mashumaro/codecs/: __init__.py  _builder.py  base.py  basic.py  json.py  msgpack.py  orjson.py  toml.py  yaml.py  yamlrocks.py
mashumaro/core/: const.py  helpers.py  metaprogramming.py
mashumaro/dialects/: msgpack.py
mashumaro/jsonschema/: __init__.py  annotations.py  builder.py  dialects.py  models.py  plugins.py  schema.py
mashumaro/meta/: helpers.py  macros.py  patch.py
mashumaro/mixins/: dict.py  json.py  (+6 more)
tests/: conftest.py  entities.py  entities_forward_refs.py  entities_pep_695.py  entities_pep_695_deferred_ann.py  test_aliases.py  test_annotated.py  test_code_generation_options.py  test_common.py  test_config.py  test_data_types.py  test_datetime_parsers.py  test_dialect.py  test_discriminated_unions.py  test_encoder_dict.py  test_entities.py  test_exceptions.py  test_forward_refs.py  test_generics.py  test_generics_pep_695.py  test_helper.py  test_hooks.py  test_json.py  test_literal.py  test_loose_deserialization.py  test_meta.py  test_metadata_options.py  test_msgpack.py  test_mutable_mapping.py  test_not_required_with_future_annotations.py  test_orjson.py  test_pep_563.py  test_pep_646.py  test_pep_655.py  test_pep_695.py  test_recursive_union.py  test_self.py  test_serde_kwargs.py  test_serialization_strategy.py  test_serialization_strategy_563.py  (+12 more)
(+77 files in other folders)
